--- a/public/components/View/styles.less
+++ b/public/components/View/styles.less
@@ -1,28 +1,95 @@
+@base: #001a3a;
+@red: #8d0000;
+
 .box-shadow() {
-  box-shadow: 0 0 3px 0 #555;
+  box-shadow: 0 0 3px 1px lighten(@base, 10%);
 }
 
-section {
-  padding: 10%;
-  canvas {
-    width: 100%;
-    .box-shadow;
+.red-button() {
+  display: inline-block;
+  height: 100%;
+  padding: 3px 10px;
+  color: #fff;
+  background-color: @red;
+  font-size: 18px;
+  border: none;
+  border-radius: 1px;
+  cursor: pointer;
+  text-shadow: 0 0 5px #000;
+  text-decoration: none;
+  transition: 0.2s filter;
+  .box-shadow;
+  &:hover {
+    filter: brightness(1.2);
   }
-  input[type='file'] {
-    display: none;
+  &:active {
+    filter: brightness(1.5);
   }
-  label {
-    display: block;
-    padding: 1%;
-    width: 20%;
-    background-color: #8d0000;
+  &:focus {
+    outline: 0;
+  }
+  span {
+    display: flex;
+    height: 100%;
+    align-items: center;
+  }
+}
+
+main {
+  display: grid;
+  width: 100%;
+  height: 100%;
+  grid: 'nav header' 'aside section';
+  grid-template-columns: 250px 1fr;
+  grid-template-rows: 50px 1fr;
+  grid-gap: 1px;
+  background-color: lighten(@base, 10%);
+
+  nav {
+    grid-area: nav;
+    padding: 5px;
     color: #fff;
-    font-size: 1.5em;
-    cursor: pointer;
-    transition: 0.2s filter;
-    .box-shadow;
-    &:hover {
-      filter: brightness(1.2);
+    background-color: @red;
+    img {
+      display: block;
+      margin: 0 auto;
+      height: 100%;
+      filter: drop-shadow(0 0 0 #000);
+      transition: 0.2s filter;
+      &:hover {
+        filter: drop-shadow(0 0 10px #000);
+      }
+    }
+  }
+
+  header {
+    grid-area: header;
+    padding: 5px 10px;
+    background-color: @base;
+    input[type='file'] {
+      display: none;
+    }
+    label, a {
+      margin-right: 5px;
+      .red-button;
+    }
+  }
+
+  aside {
+    grid-area: aside;
+    background-color: @base;
+  }
+
+  section {
+    grid-area: section;
+    padding: 20px;
+    background-color: @base;
+    canvas {
+      display: block;
+      margin: 0 auto;
+      width: 100%;
+      max-width: 100vh;
+      .box-shadow;
     }
   }
 }
