--- a/public/components/View/styles.less
+++ b/public/components/View/styles.less
@@ -35,12 +35,12 @@
   }
 }
 
-main {
+#wrapper {
   display: grid;
   width: 100%;
   height: 100%;
   grid: 'nav header' 'aside section';
-  grid-template-columns: 250px 1fr;
+  grid-template-columns: 300px 1fr;
   grid-template-rows: 50px 1fr;
   grid-gap: 1px;
   background-color: lighten(@base, 10%);
@@ -78,6 +78,24 @@ main {
   aside {
     grid-area: aside;
     background-color: @base;
+    .container {
+      display: grid;
+      grid-template-columns: 40% 40% 20%;
+      span {
+        display: block;
+        padding: 5px 10px;
+        color: #fff;
+        font-size: 18px;
+      }
+      input[type='range'] {
+        display: block;
+      }
+      input[type='text'] {
+        color: #fff;
+        background-color: rgba(0, 0, 0, 0);
+        border: none;
+      }
+    }
   }
 
   section {
