--- a/public/components/View/styles.less
+++ b/public/components/View/styles.less
@@ -69,7 +69,7 @@
     input[type='file'] {
       display: none;
     }
-    label, a {
+    label, button {
       margin-right: 5px;
       .red-button;
     }
