stylized custom filters panel

--- a/public/components/View/styles.less
+++ b/public/components/View/styles.less
@@ -39,9 +39,9 @@
   display: grid;
   width: 100%;
   height: 100%;
-  grid: 'nav header' 'aside section';
+  grid: 'nav header' 'aside section' 'footer footer';
   grid-template-columns: 300px 1fr;
-  grid-template-rows: 50px 1fr;
+  grid-template-rows: 50px 1fr 200px;
   grid-gap: 1px;
   background-color: lighten(@base, 10%);
 
@@ -100,14 +100,51 @@
 
   section {
     grid-area: section;
-    padding: 20px;
     background-color: @base;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 20px;
     canvas {
       display: block;
-      margin: 0 auto;
       width: 100%;
       max-width: 100vh;
       .box-shadow;
+    }
+  }
+
+  footer {
+    grid-area: footer;
+    padding-top: 20px;
+    background-color: @base;
+    overflow: auto;
+    white-space: nowrap;
+    .filter {
+      display: inline-block;
+      padding: 0 20px;
+      width: 200px;
+      color: #fff;
+      cursor: pointer;
+      user-select: none;
+      transition: .3s;
+      &:hover {
+        background-color: lighten(@base, 10%);
+      }
+      &-name {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        padding: 5px 10px;
+        height: 15%;
+      }
+      &-view {
+        display: block;
+        padding: 5px 0;
+        height: 85%;
+        canvas {
+          width: 100%;
+        }
+      }
     }
   }
 }
