--- a/public/components/View/styles.less
+++ b/public/components/View/styles.less
@@ -1,47 +1,12 @@
-@base: #001a3a;
-@red: #8d0000;
-
-.box-shadow() {
-  box-shadow: 0 0 3px 1px lighten(@base, 10%);
-}
-
-.red-button() {
-  display: inline-block;
-  height: 100%;
-  padding: 3px 10px;
-  color: #fff;
-  background-color: @red;
-  font-size: 18px;
-  border: none;
-  border-radius: 1px;
-  cursor: pointer;
-  text-shadow: 0 0 5px #000;
-  text-decoration: none;
-  transition: 0.2s filter;
-  .box-shadow;
-  &:hover {
-    filter: brightness(1.2);
-  }
-  &:active {
-    filter: brightness(1.5);
-  }
-  &:focus {
-    outline: 0;
-  }
-  span {
-    display: flex;
-    height: 100%;
-    align-items: center;
-  }
-}
+@import './../../styles';
 
 #wrapper {
   display: grid;
   width: 100%;
   height: 100%;
-  grid: 'nav header' 'aside section' 'footer footer';
+  grid: 'nav header' 'aside section';
   grid-template-columns: 300px 1fr;
-  grid-template-rows: 50px 1fr 200px;
+  grid-template-rows: 50px 1fr;
   grid-gap: 1px;
   background-color: lighten(@base, 10%);
 
@@ -72,43 +37,8 @@
     canvas {
       display: block;
       width: 100%;
-      max-width: 80vh;
+      max-width: 120vh;
       .box-shadow;
-    }
-  }
-
-  footer {
-    grid-area: footer;
-    padding-top: 20px;
-    background-color: @base;
-    overflow: auto;
-    white-space: nowrap;
-    .filter {
-      display: inline-block;
-      padding: 0 20px;
-      width: 200px;
-      color: #fff;
-      cursor: pointer;
-      user-select: none;
-      transition: .3s;
-      &:hover {
-        background-color: lighten(@base, 10%);
-      }
-      &-name {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        padding: 5px 10px;
-        height: 15%;
-      }
-      &-view {
-        display: block;
-        padding: 5px 0;
-        height: 85%;
-        canvas {
-          width: 100%;
-        }
-      }
     }
   }
 }
