--- a/public/components/aside/styles.less
+++ b/public/components/aside/styles.less
@@ -1,10 +1,13 @@
-@import './../View/styles';
+@import './../../styles';
 
 aside {
   grid-area: aside;
   background-color: @base;
+  overflow-y: scroll;
+
   .container {
     display: grid;
+    margin: 30px 0;
     grid-template-columns: 40% 40% 20%;
     span {
       display: block;
@@ -12,13 +15,111 @@ aside {
       color: #fff;
       font-size: 18px;
     }
+
+    button {
+      .red-button;
+      display: block;
+      margin: 0 auto;
+    }
     input[type='range'] {
       display: block;
+      overflow: hidden;
+      cursor: pointer;
+      background-color: @base;
+      &:focus {
+        outline: 0;
+      }
     }
+    input[type='range'],
+    input[type='range']::-webkit-slider-runnable-track,
+    input[type='range']::-webkit-slider-thumb {
+      -webkit-appearance: none;
+    }
+    input[type='range']::-webkit-slider-runnable-track {
+      width: 100%;
+      height: 5px;
+      background: #AAA;
+    }
+    input[type='range']::-webkit-slider-thumb {
+      position: relative;
+      height: 20px;
+      width: 20px;
+      margin-top: -8px;
+      background: @red;
+      border-radius: 50%;
+      border: 2px solid white;
+    }
+    input[type='range']::-webkit-slider-thumb::before {
+      position: absolute;
+      content: '';
+      height: 10px; /* equal to height of runnable track */
+      width: 500px; /* make this bigger than the widest range input element */
+      left: -502px; /* this should be -2px - width */
+      top: 8px; /* don't change this */
+    }
+
     input[type='text'] {
       color: #fff;
       background-color: rgba(0, 0, 0, 0);
       border: none;
     }
+  }
+
+  .filter-title {
+    display: block;
+    padding: 15px 0;
+    width: 100%;
+    color: #fff;
+    text-align: center;
+    cursor: default;
+    user-select: none;
+    text-shadow: 0 0 5px #000;
+    background: linear-gradient(0deg, transparent, @red, @red, @red, transparent);
+    &:first-child {
+      background: linear-gradient(0deg, transparent, @red, @red, @red, @red);
+    }
+  }
+  .filter {
+    display: block;
+    padding: 0 20px;
+    width: 100%;
+    color: #fff;
+    cursor: pointer;
+    user-select: none;
+    transition: .3s;
+    &:hover {
+      background-color: lighten(@base, 10%);
+    }
+    &-name {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      padding: 5px 10px;
+      height: 15%;
+    }
+    &-view {
+      display: block;
+      padding: 5px 0;
+      height: 85%;
+      img {
+        width: 100%;
+      }
+    }
+  }
+
+  &::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.9);
+    border-radius: 10px;
+    background-color: lighten(@base, 15%);
+  }
+
+  &::-webkit-scrollbar {
+    width: 8px;
+  }
+
+  &::-webkit-scrollbar-thumb {
+    border-radius: 0;
+    border: 1px solid lighten(@base, 15%);
+    background: @red -webkit-linear-gradient(90deg, transparent, rgba(0, 0, 0, 0.4) 50%, transparent, transparent);
   }
 }
