--- a/public/components/View/styles.less
+++ b/public/components/View/styles.less
@@ -36,8 +36,9 @@
     padding: 20px;
     canvas {
       display: block;
-      width: 100%;
+      //width: 100%;
       max-width: 120vh;
+      max-height: 80vh;
       .box-shadow;
     }
   }
